Add example auth
