# internal/api/gin/router.go
@@ -23,16 +23,23 @@ func NewRouter(pc ProductController) Router {
 // @Version       0.1
 // @License.name  MIT
 // @License.url   https://opensource.org/licenses/MIT
+
+// @securityDefinitions.apikey  API Key
+// @in                          header
+// @name                        X-API-KEY
 func (r *router) Start() {
 	e := gin.Default()
 
 	docs.SwaggerInfo.BasePath = ""
 
-	e.GET("/product", r.pc.getProducts)
-	e.GET("/product/:id", r.pc.getProduct)
-	e.POST("/product", r.pc.postProduct)
-	e.PUT("/product/:id", r.pc.putProduct)
-	e.DELETE("/product/:id", r.pc.deleteProduct)
+	apiKeyRequired := e.Group("/", requireApiKey())
+	apiKeyRequired.GET("/product", r.pc.getProducts)
+	apiKeyRequired.GET("/product/:id", r.pc.getProduct)
+
+	forbidden := e.Group("/", forbidRequest())
+	forbidden.POST("/product", r.pc.postProduct)
+	forbidden.PUT("/product/:id", r.pc.putProduct)
+	forbidden.DELETE("/product/:id", r.pc.deleteProduct)
 
 	e.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
